# IA753_Final_Work

./: .gitignore  IA753_Final.ipynb  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
data/: README
data_processed/motor_execution/S02_ME/: processed_motorexecution_subject2_run10.pkl  processed_motorexecution_subject2_run3.pkl  processed_motorexecution_subject2_run4.pkl  processed_motorexecution_subject2_run5.pkl  processed_motorexecution_subject2_run6.pkl  processed_motorexecution_subject2_run7.pkl
data_processed/motor_execution/S03_ME/: processed_motorexecution_subject3_run1.pkl  processed_motorexecution_subject3_run2.pkl  processed_motorexecution_subject3_run3.pkl  processed_motorexecution_subject3_run5.pkl  processed_motorexecution_subject3_run7.pkl
data_processed/motor_execution/S04_ME/: processed_motorexecution_subject4_run1.pkl  processed_motorexecution_subject4_run10.pkl  processed_motorexecution_subject4_run2.pkl  processed_motorexecution_subject4_run4.pkl  processed_motorexecution_subject4_run6.pkl  processed_motorexecution_subject4_run9.pkl
data_processed/motor_execution/S05_ME/: processed_motorexecution_subject5_run5.pkl  processed_motorexecution_subject5_run6.pkl  processed_motorexecution_subject5_run7.pkl  processed_motorexecution_subject5_run8.pkl  processed_motorexecution_subject5_run9.pkl
data_processed/motor_execution/S06_ME/: processed_motorexecution_subject6_run1.pkl  processed_motorexecution_subject6_run10.pkl  processed_motorexecution_subject6_run7.pkl
data_processed/motor_execution/S07_ME/: processed_motorexecution_subject7_run10.pkl  processed_motorexecution_subject7_run2.pkl  processed_motorexecution_subject7_run6.pkl  (+3 more)
dev/: Data_Processing_With_Comparison.ipynb  README.md  testing_eeg_pipeline.ipynb
docs/: 1_preprocessing.md  2_segmentation_data_preparation.md  3.Discussion_Methodology.md  3.Discussion_Methodology_PSD_ERD_ERS.md
reports/: Methods.md
results/backbone/: curves.npz  scalars.pkl
results/tables/: inferential_ME_vs_MI.csv  inferential_all.csv  inferential_movement_vs_rest.csv  summary_by_group.csv
src/: README  eeg_analysis.py  eeg_inference.py  eeg_pipeline.py  pipeline_steps.md
(+109 files in other folders)
