[build-system]
requires = ["setuptools>=61.0,<70.0", "wheel>=0.37.0,<1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ia753-project"
version = "0.1.0"
description = "IA753 Final Work Project"
readme = "README.md"
requires-python = ">=3.13,<3.15"
license = {text = "MIT"}
authors = [
    {name = "Mateus Schneider Castilhos", email = "mateus.aschneider@gmail.com"},
    {name = "Renan Ribeiro Machado ", email = ""}
]
dependencies = [
    "numpy>=1.24,<2.0",
    "scipy>=1.10,<2.0",
    "pandas>=2.0,<3.0",
    "scikit-learn>=1.3,<2.0",
    "matplotlib>=3.8,<4.0",
    "seaborn>=0.13,<1.0",
    "ipykernel>=6.25,<8.0",
    "ipython>=8.15,<9.0",
    "ipywidgets>=8.1,<9.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0,<9.0", "black>=24.0,<26.0", "mypy>=1.0,<2.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
python_files = ["test_*.py", "*_test.py"]

[tool.black]
line-length = 99
target-version = ['py313']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
